fix alignment on badge

--- a/style/styles.css
+++ b/style/styles.css
@@ -374,7 +374,7 @@ nav .hamburger {
 
 #date-badge-3 {
   margin-left: 2.26vw;
-  margin-top: -3vh;
+  margin-top: -2.5vh;
   background: skyblue;
   background-color: var(--violet);
 }
